<resources>
    <string name="app_name">Tennis counter</string>
    <string name="playerA">Name of the local player</string>
    <string name="playerB">Name of the visitor player</string>
    <string name="set">Number of sets</string>
    <string name="start">Start!</string>
    <string name="counterA">Local Player</string>
    <string name="counterB">Visitor Player</string>
    <string name="wonSet">Sets won</string>
    <string name="actualPoints">Actual points</string>
    <string name="score">Score!</string>
    <string name="reset">Reset</string>
    <string name="actualGames">Actual games</string>
    <string name="a0">0</string>
    <string name="a1">1</string>
    <string name="a3">3</string>
    <string name="a5">5</string>
</resources>
