<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tenniscounter.Counter"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/playerText"
                android:id="@+id/counterNameA"
                android:text="@string/counterA"/>
            <TextView
                style="@style/setText"
                android:text="@string/wonSet"
                />
            <TextView
                style="@style/numberOfsetsText.Text"
                android:text="0"
                android:id="@+id/actualASets"/>
            <TextView
                style="@style/smallText"
                android:text="@string/actualGames"
                />
            <TextView
                style="@style/numberOFgames"
                android:text="0"
                android:id="@+id/gamesA"/>
            <TextView
                style="@style/smallText"
                android:text="@string/actualPoints"
                />
            <TextView
                style="@style/numberOFpoints"
                android:text="0"
                android:id="@+id/actualAPoints"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
                android:onClick="scoreA"
                android:id="@+id/scoreForA"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/playerText"
                android:id="@+id/counterNameB"
                android:text="@string/counterB" />
            <TextView
                style="@style/setText"
                android:text="@string/wonSet"
                />
            <TextView
                style="@style/numberOfsetsText.Text"
                android:text="0"
                android:id="@+id/actualBSets"/>
            <TextView
                style="@style/smallText"
                android:text="@string/actualGames"
                />
            <TextView
                style="@style/numberOFgames"
                android:text="0"
                android:id="@+id/gamesB"/>
            <TextView
                style="@style/smallText"
                android:text="@string/actualPoints"
                />
            <TextView
                style="@style/numberOFpoints"
                android:text="0"
                android:id="@+id/actualBPoints"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/score"
                android:onClick="scoreB"
                android:id="@+id/scoreForB"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/reset"
        android:onClick="reset"/>




</RelativeLayout>
